# FINCH-Science

./: .gitignore  .pre-commit-config.yaml  Auxiliary_to_At_Sensor_Radiance_Pipeline.py  GitHub_Test.ipynb  Neural Network.py  README.md  Untitled0.ipynb  new_SFA_funtions.py  new_funtions.py  utat_science_csv_parser.py
Auxiliary_to_Unmixing_Methods/: BestEM.py
LinearErrorAnalysis/: README.md  config.py  forward.py  forward_hapi.py  hapi.py  isrf.py  libRT.py  main.py  optim.py  photon_noise.py
Linear_Error_Analysis/: config.py  forward-AdynPRO7.py  forward.py  forward_hapi.py  lea.sh  main.py  optim.py
Old_Documents/linear_error_analysis/: pyproject.toml
Old_Documents/linear_error_analysis/data/: ID07_WV01585-01684.header  ID32_WV01585-01684.header
Old_Documents/linear_error_analysis/src/: main.py  optim.py
Old_Documents/linear_error_analysis/src/libs/: hapi.py  photon_noise.py
Scientific_Requirements/: FINCH_SpectralBinningFunctions.ipynb
THE PIPELINE/: Pipeline.py
Unmixing_Methods/: SFA.py  brute_force.py
linear_error_analysis/: README.md  lea.sh  pyproject.toml
linear_error_analysis/data/: ID32_WV01585-01684.data
linear_error_analysis/doc/: linear error analysis.pptx  more on forward model.pptx
linear_error_analysis/outputs/: ecm.csv
linear_error_analysis/src/: config.py  errors.py  forward.py  isrf.py  main.py  optim.py
linear_error_analysis/src/lib/: gta_xch4.py  hapi.py  libRT.py  photon_noise.py
linear_error_analysis/src/libs/: gta_xch4.py  libRT.py  photon_noise.py
linear_error_analysis/tests/: random_scratch.py
(+96 files in other folders)
