[tool.poetry]
name = "lea"
version = "0.1.0"
description = "linear error analysis to assess whether methane enhancements are visible at various spectral resolutions"
license = "MIT"
authors = ["Adyn Miles, Shiqi Xu, Rosie Liang"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.9"
numpy = "^1.21.4"
scipy = "^1.7.2"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
miepython = "^2.2.1"
netCDF4 = "^1.5.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
pylint = "^2.12.2"
pylint-runner = "^0.6.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
